--- a/section1.tex
+++ b/section1.tex
@@ -93,10 +93,10 @@ M_P &= \{(C_j^{gen}, C_{i^*}^{ref})\} \quad \text{(precision best matches)} \\
 M_R &= \{(C_i^{ref}, C_{j^*}^{gen})\} \quad \text{(recall best matches)}
 \end{align}
 
-**Pipeline Flow**: These correspondence sets $M_P$ and $M_R$ serve as the foundation for all subsequent VCS components. While the similarity matrix $\mathbf{S}$ contains comprehensive pairwise relationships, the Best Matching Algorithm distills this information into optimized correspondences that feed directly into both Local Alignment Score (LAS) computation and Narrative Alignment Score (NAS) assessment, ensuring consistent chunk pairing across all evaluation dimensions.
+\textbf{Pipeline Flow}: These correspondence sets $M_P$ and $M_R$ serve as the foundation for all subsequent VCS components. While the similarity matrix $\mathbf{S}$ contains comprehensive pairwise relationships, the Best Matching Algorithm distills this information into optimized correspondences that feed directly into both Local Alignment Score (LAS) computation and Narrative Alignment Score (NAS) assessment, ensuring consistent chunk pairing across all evaluation dimensions.
 
 \subsubsection{Local Alignment Score (LAS)}
-Receiving the optimized correspondence sets $M_P$ and $M_R$ from the Best-Matching Algorithm, VCS computes the Local Alignment Score by extracting the cosine similarities from the original similarity matrix $\mathbf{S}$ for each matched pair. This process transforms the comprehensive pairwise similarity information into focused alignment assessment based on optimal correspondences.
+Using correspondence sets $M_P$ and $M_R$ from the Best Matching Algorithm, VCS computes Local Alignment Score by extracting cosine similarities from similarity matrix $\mathbf{S}$ for each matched pair.
 
 The precision component $LAS_P$ evaluates how well generated text aligns with reference text by averaging similarities from $M_P$, while recall component $LAS_R$ evaluates the reverse using $M_R$. LAS combines both perspectives through their harmonic mean:
 
@@ -104,40 +104,38 @@ The precision component $LAS_P$ evaluates how well generated text aligns with re
 LAS = \frac{2 \cdot LAS_P \cdot LAS_R}{LAS_P + LAS_R}
 \end{equation}
 
-**Transition to Narrative Assessment**: While LAS captures semantic alignment quality through these optimized correspondences, it cannot assess whether the matched chunks maintain proper chronological relationships. This limitation necessitates the Narrative Alignment Score, which analyzes the same correspondence sets $M_P$ and $M_R$ from a temporal coherence perspective.
+\textbf{Transition to Narrative Assessment}: While LAS captures semantic alignment quality through these optimized correspondences, it cannot assess whether the matched chunks maintain proper chronological relationships. This limitation necessitates the Narrative Alignment Score, which analyzes the same correspondence sets $M_P$ and $M_R$ from a temporal coherence perspective.
 
 \subsubsection{Narrative Alignment Score (NAS)}
 While LAS successfully captures local semantic alignment, it faces two critical limitations that compromise comprehensive video description evaluation. First, LAS remains completely insensitive to chronological ordering—descriptions with identical semantic content but completely reversed temporal order receive identical scores. Second, LAS exhibits limited sensitivity to missing or extra content since semantic similarity averaging allows weak matches to inflate overall scores, masking content gaps or extraneous additions.
 
-These limitations stem from LAS's fundamental design: averaging cosine similarities of matched chunks prioritizes semantic overlap over narrative structure. Hence, a description that correctly captures all story elements but presents them in chronological chaos would score identically to a well-structured narrative. This poses a severe problem for video comprehension evaluation, where temporal coherence is essential for demonstrating true understanding.
+These limitations stem from LAS's fundamental design: averaging cosine similarities of matched chunks prioritizes semantic overlap over narrative structure. Hence, a description that correctly captures all story elements but presents them in chronological chaos would score identically to a well-structured narrative. This undermines video comprehension evaluation, where temporal coherence demonstrates understanding.
 
 To address these fundamental gaps, VCS introduces the Narrative Alignment Score (NAS) that evaluates chronological consistency while enhancing sensitivity to content completeness through narrative alignment assessment. 
 
-However, chronological assessment itself presents a multi-faceted challenge requiring complementary approaches. Consider two types of chronological disruptions: (1) **Global chronological chaos** where the ending is swapped with the beginning, and (2) **Local chronological disorder** where neighboring chunks are swapped. A single assessment mechanism cannot effectively detect both patterns.
+Chronological assessment requires addressing two distinct disruption patterns: global structural violations where distant segments swap positions, and local flow disruptions where neighboring segments exchange order.
 
-**Distance-based assessment** excels at detecting global chronological disruptions by measuring how far each chunk deviates from its ideal position within mapping windows. When endings swap with beginnings, chunks move dramatically outside their expected windows, incurring substantial penalties. However, when neighboring chunks swap positions, their distances from mapping window boundaries remain relatively small, resulting in minimal penalties that fail to reflect the severity of local chronological disorder.
+Chronological assessment requires two complementary perspectives to capture different types of temporal disruptions. A global perspective detects large-scale structural violations where narrative segments appear far from their expected positions. A local perspective captures fine-grained flow disruptions where neighboring segments violate expected sequential relationships.
 
-**Line-based assessment** addresses this gap by focusing exclusively on local narrative flow between consecutive chunks. Rather than measuring global position conformity, it evaluates whether chunk $C_{i+1}$ appears at its expected neighboring position relative to chunk $C_i$, regardless of their global positions. Hence, global chronological chaos (where chunks maintain relative neighbor relationships despite positional chaos) incurs minimal line-based penalties, while neighboring chunk swaps create substantial violations in expected local flow patterns.
+Neither approach alone provides comprehensive chronological evaluation. Global assessment may miss subtle neighbor-level reorderings, while local assessment may overlook dramatic structural violations. This necessitates dual assessment mechanisms that together capture both macro-level chronological structure and micro-level narrative flow.
 
-This complementary relationship necessitates **both** assessments: distance-based NAS captures global chronological structure violations, while line-based NAS detects local narrative flow disruptions. Together, they provide comprehensive chronological evaluation that neither approach achieves independently.
-
-NAS comprises four integrated components: Distance-based NAS ($NAS_D$) for global chronological assessment, Line-based NAS ($NAS_L$) for local narrative flow, a window regularizer for fairness control, and the user-controlled Local Narrative Tolerance (LNT) parameter for configurable flexibility.
+NAS addresses chronological evaluation through integrated assessment components that capture different aspects of temporal alignment and narrative coherence.
 
 \subsubsection{Defining Local Narrative Tolerance (LNT)}
-Before diving into narrative alignment assessment, we must address a fundamental challenge: video narratives inherently permit multiple valid orderings and descriptive variations without compromising comprehension quality. This flexibility stems from the complex nature of video scenes where concurrent events, overlapping actions, and multi-layered storytelling create legitimate alternatives in temporal presentation and detail granularity.
+Video narratives permit multiple valid orderings and descriptive variations without compromising comprehension quality. Complex scenes with concurrent events and overlapping actions create legitimate alternatives in temporal presentation and detail granularity.
 
 Consider a video scene with multiple actors performing simultaneous actions—one description might detail Character A's actions first, then Character B's, while another equally valid description interleaves their actions or prioritizes different aspects. Similarly, some descriptions provide extensive detail while others focus on key events, both potentially representing accurate comprehension at different granularities.
 
-To accommodate this inherent narrative flexibility, VCS employs Local Narrative Tolerance (LNT) as a configurable tolerance parameter. LNT operates differently across NAS components: in Distance-based NAS, LNT expands mapping window boundaries to accommodate chronological flexibility, while in Line-based NAS, LNT adjusts expected neighbor distances and permits controlled chronological variations. The specific mechanisms will be detailed in each respective section below.
+To accommodate this inherent narrative flexibility, VCS employs Local Narrative Tolerance (LNT) as a configurable tolerance parameter. LNT defines acceptable deviation from strict chronological ordering while maintaining narrative coherence. LNT distinguishes legitimate narrative variations from chronological errors, providing configurable evaluation strictness.
 
 \subsubsection{Distance-based NAS ($NAS_D$)}
 Building on the Best Matching Algorithm's correspondence sets $M_P$ and $M_R$, Distance-based NAS formalizes global chronological assessment by measuring how far each matched chunk deviates from its ideal narrative position. The core insight stems from Mapping Windows, which define where chunks should ideally align if narrative structure is preserved between reference and generated descriptions.
 
 $NAS_D$ operationalizes this concept by penalizing each chunk proportionally to its distance from the ideal region defined by the Mapping Windows, making it particularly sensitive to global chronological alignment violations like beginning-ending swaps. For precision evaluation, $NAS_D$ processes correspondence set $M_P$ against precision Mapping Windows $MW_p$; for recall evaluation, it uses correspondence set $M_R$ against recall Mapping Windows $MW_r$.
 
-**Content Alignment Through Distance Penalties**: Beyond chronological assessment, $NAS_D$ inherently captures content completeness. When chunks are missing from generated descriptions, remaining chunks in the precision evaluation slightly shift outside their expected mapping windows to align with available content, incurring distance penalties that reflect content gaps. Conversely, extra content in generated descriptions causes reference chunks in recall evaluation to map to suboptimal positions, again incurring penalties that signal content additions.
+\textbf{Content Alignment Through Distance Penalties}: Beyond chronological assessment, $NAS_D$ inherently captures content completeness. When chunks are missing from generated descriptions, remaining chunks in the precision evaluation slightly shift outside their expected mapping windows to align with available content, incurring distance penalties that reflect content gaps. Conversely, extra content in generated descriptions causes reference chunks in recall evaluation to map to suboptimal positions, again incurring penalties that signal content additions.
 
-**LNT Implementation in Distance-Based Assessment**: As conceptually introduced above, LNT accommodates legitimate narrative flexibility by expanding each Mapping Window with penalty-free zones. In $NAS_D$, LNT increases tolerance by padding window boundaries: chunks matching within $\tau_{LNT} \cdot h_{LNT}$ distance from original window edges incur zero penalty, recognizing acceptable chronological variations. Crucially, when reference and generated lengths are perfectly divisible, LNT of 1 allows up to 2 neighboring chunks to swap positions without penalty, while LNT of 2 permits swaps with chunks up to 2 positions away (e.g., $C_1$ swapping with $C_3$). This mathematical relationship ensures that LNT provides both descriptive variability tolerance and controlled chronological flexibility.
+\textbf{LNT Implementation in Distance-Based Assessment}: As conceptually introduced above, LNT accommodates legitimate narrative flexibility by expanding each Mapping Window with penalty-free zones. In $NAS_D$, LNT increases tolerance by padding window boundaries: chunks matching within $\tau_{LNT} \cdot h_{LNT}$ distance from original window edges incur zero penalty, recognizing acceptable chronological variations. Crucially, when reference and generated lengths are perfectly divisible, LNT of 1 allows up to 2 neighboring chunks to swap positions without penalty, while LNT of 2 permits swaps with chunks up to 2 positions away (e.g., $C_1$ swapping with $C_3$). This mathematical relationship ensures that LNT provides both descriptive variability tolerance and controlled chronological flexibility.
 
 \paragraph{Local Narrative Tolerance (LNT)}
 We first compute the LNT window height:
@@ -185,9 +183,9 @@ L_{\max} &= \max_{y_i \in MW} \sum_{i=1}^{n-1} \sqrt{(x_{i+1} - x_i)^2 + (y_{i+1
 These bounds are obtained through dynamic programming over consecutive windows: each candidate position $y_{i+1}$ is evaluated from every candidate position $y_i$ with edge-weight $\sqrt{1^2 + (y_{i+1} - y_i)^2}$. Tracing predecessors yields the optimal floor path (shortest line) and ceil path (longest line). The vertical differences $\Delta y_i^{\text{floor}}$ along the floor path are cached as $\text{DY}_{\text{floor}}[x_i] = \Delta y_i^{\text{floor}}$ to later constrain oversized jumps when LNT is applied.
 
 \paragraph{Local Narrative Tolerance (LNT)}
-**Content Alignment Through Line Length Variations**: Similar to distance-based assessment, $NAS_L$ captures content completeness through narrative line characteristics. Missing chunks cause the actual narrative line to become shorter than the ideal range as consecutive alignments skip intermediate positions, while extra content creates longer-than-expected lines as additional alignment points extend the path length. Both scenarios move $L_{act}$ outside the ideal band $[L_{min}, L_{max}]$, triggering proportional penalties.
+\textbf{Content Alignment Through Line Length Variations}: Similar to distance-based assessment, $NAS_L$ captures content completeness through narrative line characteristics. Missing chunks cause the actual narrative line to become shorter than the ideal range as consecutive alignments skip intermediate positions, while extra content creates longer-than-expected lines as additional alignment points extend the path length. Both scenarios move $L_{act}$ outside the ideal band $[L_{min}, L_{max}]$, triggering proportional penalties.
 
-**LNT Implementation in Line-Based Assessment**: In $NAS_L$, LNT operates differently than in distance-based assessment, focusing on acceptable jump magnitudes between consecutive alignment points rather than window boundary expansion. LNT defines tolerance ranges for vertical jumps between neighbors, accommodating natural narrative variations in local flow. The base tolerance window $\omega_0$ and its LNT-expanded version $\omega_{LNT}$ are computed using the previously defined mapping window height $h_{mw}$, where $L_s$ and $L_t$ represent source and target timeline lengths respectively:
+\textbf{LNT Implementation in Line-Based Assessment}: In $NAS_L$, LNT operates differently than in distance-based assessment, focusing on acceptable jump magnitudes between consecutive alignment points rather than window boundary expansion. LNT defines tolerance ranges for vertical jumps between neighbors, accommodating natural narrative variations in local flow. The base tolerance window $\omega_0$ and its LNT-expanded version $\omega_{LNT}$ are computed using the previously defined mapping window height $h_{mw}$, where $L_s$ and $L_t$ represent source and target timeline lengths respectively:
 \begin{align}
 \omega_0 &= \begin{cases}
 h_{mw}, & L_t \leq L_s, \\
