--- a/section1.tex
+++ b/section1.tex
@@ -107,26 +107,10 @@ LAS = \frac{2 \cdot LAS_P \cdot LAS_R}{LAS_P + LAS_R}
 \textbf{Transition to Narrative Assessment}: While LAS captures semantic alignment quality through these optimized correspondences, it cannot assess whether the matched chunks maintain proper chronological relationships. This limitation necessitates the Narrative Alignment Score, which analyzes the same correspondence sets $M_P$ and $M_R$ from a temporal coherence perspective.
 
 \subsubsection{Narrative Alignment Score (NAS)}
-While LAS successfully captures local semantic alignment, it faces two critical limitations that compromise comprehensive video description evaluation. First, LAS remains completely insensitive to chronological ordering—descriptions with identical semantic content but completely reversed temporal order receive identical scores. Second, LAS exhibits limited sensitivity to missing or extra content since semantic similarity averaging allows weak matches to inflate overall scores, masking content gaps or extraneous additions.
-
-These limitations stem from LAS's fundamental design: averaging cosine similarities of matched chunks prioritizes semantic overlap over narrative structure. Hence, a description that correctly captures all story elements but presents them in chronological chaos would score identically to a well-structured narrative. This undermines video comprehension evaluation, where temporal coherence demonstrates understanding.
-
-To address these fundamental gaps, VCS introduces the Narrative Alignment Score (NAS) that evaluates chronological consistency while enhancing sensitivity to content completeness through narrative alignment assessment. 
-
-Chronological assessment requires addressing two distinct disruption patterns: global structural violations where distant segments swap positions, and local flow disruptions where neighboring segments exchange order.
-
-Chronological assessment requires two complementary perspectives to capture different types of temporal disruptions. A global perspective detects large-scale structural violations where narrative segments appear far from their expected positions. A local perspective captures fine-grained flow disruptions where neighboring segments violate expected sequential relationships.
-
-Neither approach alone provides comprehensive chronological evaluation. Global assessment may miss subtle neighbor-level reorderings, while local assessment may overlook dramatic structural violations. This necessitates dual assessment mechanisms that together capture both macro-level chronological structure and micro-level narrative flow.
-
-NAS addresses chronological evaluation through integrated assessment components that capture different aspects of temporal alignment and narrative coherence.
+However, LAS remains insensitive to chronological ordering and exhibits limited sensitivity to missing or extra content. While LAS performs local semantic alignment and can detect content variations, its reliance on semantic similarity averaging means that even weak semantic matches contribute to the overall score, reducing its ability to strongly penalize missing or extraneous content. To mitigate both limitations, VCS introduces NAS that evaluates chronological consistency while enhancing sensitivity to content gaps and additions through narrative alignment assessment. NAS comprises four components: Distance-based NAS ($NAS_D$), Line-based NAS ($NAS_L$), a window regularizer, and the user-controlled Local Narrative Tolerance (LNT) parameter.
 
 \subsubsection{Defining Local Narrative Tolerance (LNT)}
-Video narratives permit multiple valid orderings and descriptive variations without compromising comprehension quality. Complex scenes with concurrent events and overlapping actions create legitimate alternatives in temporal presentation and detail granularity.
-
-Consider a video scene with multiple actors performing simultaneous actions—one description might detail Character A's actions first, then Character B's, while another equally valid description interleaves their actions or prioritizes different aspects. Similarly, some descriptions provide extensive detail while others focus on key events, both potentially representing accurate comprehension at different granularities.
-
-To accommodate this inherent narrative flexibility, VCS employs Local Narrative Tolerance (LNT) as a configurable tolerance parameter. LNT defines acceptable deviation from strict chronological ordering while maintaining narrative coherence. LNT distinguishes legitimate narrative variations from chronological errors, providing configurable evaluation strictness.
+Video narratives permit multiple valid orderings and descriptive variations without compromising comprehension quality. Complex scenes with concurrent events and overlapping actions create legitimate alternatives in temporal presentation and detail granularity. Consider a video scene with multiple actors performing simultaneous actions—one description might detail Character A's actions first, then Character B's, while another equally valid description interleaves their actions or prioritizes different aspects. Similarly, some descriptions provide extensive detail while others focus on key events, both potentially representing accurate comprehension at different granularities. To accommodate this inherent narrative flexibility, VCS employs Local Narrative Tolerance (LNT) as a configurable tolerance parameter. LNT defines acceptable deviation from strict chronological ordering while maintaining narrative coherence, distinguishing legitimate narrative variations from chronological errors.
 
 \subsubsection{Distance-based NAS ($NAS_D$)}
 Building on the Best Matching Algorithm's correspondence sets $M_P$ and $M_R$, Distance-based NAS formalizes global chronological assessment by measuring how far each matched chunk deviates from its ideal narrative position. The core insight stems from Mapping Windows, which define where chunks should ideally align if narrative structure is preserved between reference and generated descriptions.
