--- a/section1.tex
+++ b/section1.tex
@@ -107,17 +107,13 @@ LAS = \frac{2 \cdot LAS_P \cdot LAS_R}{LAS_P + LAS_R}
 \textbf{Transition to Narrative Assessment}: While LAS captures semantic alignment quality through these optimized correspondences, it cannot assess whether the matched chunks maintain proper chronological relationships. This limitation necessitates the Narrative Alignment Score, which analyzes the same correspondence sets $M_P$ and $M_R$ from a temporal coherence perspective.
 
 \subsubsection{Narrative Alignment Score (NAS)}
-However, LAS remains insensitive to chronological ordering and exhibits limited sensitivity to missing or extra content. While LAS performs local semantic alignment and can detect content variations, its reliance on semantic similarity averaging means that even weak semantic matches contribute to the overall score, reducing its ability to strongly penalize missing or extraneous content. To mitigate both limitations, VCS introduces NAS that evaluates chronological consistency while enhancing sensitivity to content gaps and additions through narrative alignment assessment. NAS comprises four components: Distance-based NAS ($NAS_D$), Line-based NAS ($NAS_L$), a window regularizer, and the user-controlled Local Narrative Tolerance (LNT) parameter.
+However, LAS remains insensitive to chronological ordering. While LAS performs local semantic alignment and can detect content variations, descriptions with identical semantic content but completely reversed temporal order receive identical scores. To address this limitation, VCS introduces NAS that evaluates chronological consistency through narrative alignment assessment. NAS comprises four components: Distance-based NAS ($NAS_D$), Line-based NAS ($NAS_L$), a window regularizer, and the user-controlled Local Narrative Tolerance (LNT) parameter.
 
 \subsubsection{Defining Local Narrative Tolerance (LNT)}
 Video narratives permit multiple valid orderings and descriptive variations without compromising comprehension quality. Complex scenes with concurrent events and overlapping actions create legitimate alternatives in temporal presentation and detail granularity. Consider a video scene with multiple actors performing simultaneous actions—one description might detail Character A's actions first, then Character B's, while another equally valid description interleaves their actions or prioritizes different aspects. Similarly, some descriptions provide extensive detail while others focus on key events, both potentially representing accurate comprehension at different granularities. To accommodate this inherent narrative flexibility, VCS employs Local Narrative Tolerance (LNT) as a configurable tolerance parameter. LNT defines acceptable deviation from strict chronological ordering while maintaining narrative coherence, distinguishing legitimate narrative variations from chronological errors.
 
 \subsubsection{Distance-based NAS ($NAS_D$)}
-Building on the Best Matching Algorithm's correspondence sets $M_P$ and $M_R$, Distance-based NAS formalizes global chronological assessment by measuring how far each matched chunk deviates from its ideal narrative position. The core insight stems from Mapping Windows, which define where chunks should ideally align if narrative structure is preserved between reference and generated descriptions.
-
-$NAS_D$ operationalizes this concept by penalizing each chunk proportionally to its distance from the ideal region defined by the Mapping Windows, making it particularly sensitive to global chronological alignment violations like beginning-ending swaps. For precision evaluation, $NAS_D$ processes correspondence set $M_P$ against precision Mapping Windows $MW_p$; for recall evaluation, it uses correspondence set $M_R$ against recall Mapping Windows $MW_r$.
-
-\textbf{Content Alignment Through Distance Penalties}: Beyond chronological assessment, $NAS_D$ inherently captures content completeness. When chunks are missing from generated descriptions, remaining chunks in the precision evaluation slightly shift outside their expected mapping windows to align with available content, incurring distance penalties that reflect content gaps. Conversely, extra content in generated descriptions causes reference chunks in recall evaluation to map to suboptimal positions, again incurring penalties that signal content additions.
+Building on the Best Matching Algorithm's correspondence sets $M_P$ and $M_R$, Distance-based NAS formalizes global chronological assessment by measuring how far each matched chunk deviates from its ideal narrative position. The core insight stems from Mapping Windows, which define where chunks should ideally align if narrative structure is preserved between reference and generated descriptions. $NAS_D$ operationalizes this concept by penalizing each chunk proportionally to its distance from the ideal region defined by the Mapping Windows, making it particularly sensitive to global chronological alignment violations like beginning-ending swaps. For precision evaluation, $NAS_D$ processes correspondence set $M_P$ against precision Mapping Windows $MW_p$; for recall evaluation, it uses correspondence set $M_R$ against recall Mapping Windows $MW_r$.
 
 \textbf{LNT Implementation in Distance-Based Assessment}: As conceptually introduced above, LNT accommodates legitimate narrative flexibility by expanding each Mapping Window with penalty-free zones. In $NAS_D$, LNT increases tolerance by padding window boundaries: chunks matching within $\tau_{LNT} \cdot h_{LNT}$ distance from original window edges incur zero penalty, recognizing acceptable chronological variations. Crucially, when reference and generated lengths are perfectly divisible, LNT of 1 allows up to 2 neighboring chunks to swap positions without penalty, while LNT of 2 permits swaps with chunks up to 2 positions away (e.g., $C_1$ swapping with $C_3$). This mathematical relationship ensures that LNT provides both descriptive variability tolerance and controlled chronological flexibility.
 
@@ -167,7 +163,6 @@ L_{\max} &= \max_{y_i \in MW} \sum_{i=1}^{n-1} \sqrt{(x_{i+1} - x_i)^2 + (y_{i+1
 These bounds are obtained through dynamic programming over consecutive windows: each candidate position $y_{i+1}$ is evaluated from every candidate position $y_i$ with edge-weight $\sqrt{1^2 + (y_{i+1} - y_i)^2}$. Tracing predecessors yields the optimal floor path (shortest line) and ceil path (longest line). The vertical differences $\Delta y_i^{\text{floor}}$ along the floor path are cached as $\text{DY}_{\text{floor}}[x_i] = \Delta y_i^{\text{floor}}$ to later constrain oversized jumps when LNT is applied.
 
 \paragraph{Local Narrative Tolerance (LNT)}
-\textbf{Content Alignment Through Line Length Variations}: Similar to distance-based assessment, $NAS_L$ captures content completeness through narrative line characteristics. Missing chunks cause the actual narrative line to become shorter than the ideal range as consecutive alignments skip intermediate positions, while extra content creates longer-than-expected lines as additional alignment points extend the path length. Both scenarios move $L_{act}$ outside the ideal band $[L_{min}, L_{max}]$, triggering proportional penalties.
 
 \textbf{LNT Implementation in Line-Based Assessment}: In $NAS_L$, LNT operates differently than in distance-based assessment, focusing on acceptable jump magnitudes between consecutive alignment points rather than window boundary expansion. LNT defines tolerance ranges for vertical jumps between neighbors, accommodating natural narrative variations in local flow. The base tolerance window $\omega_0$ and its LNT-expanded version $\omega_{LNT}$ are computed using the previously defined mapping window height $h_{mw}$, where $L_s$ and $L_t$ represent source and target timeline lengths respectively:
 \begin{align}
@@ -208,6 +203,9 @@ NAS_L = \frac{2 \cdot NAS_{L,P} \cdot NAS_{L,R}}{NAS_{L,P} + NAS_{L,R}}
 mirroring the fusion used for distance-based NAS.
 
 With this formulation, paths that remain within the ideal band score 1.0; drastic inversions collapse $\ell_i$ to zero, pushing $L_{\text{act}}$ below $L_{\min}$ and the score toward 0, while minor narrative reorderings are absorbed by $\tau_{LNT}$ to avoid undue penalties.
+
+\subsubsection{Content Alignment Through NAS}
+Beyond chronological assessment, both $NAS_D$ and $NAS_L$ inherently capture content completeness through their respective mechanisms. In Distance-based assessment, when chunks are missing from generated descriptions, remaining chunks in the precision evaluation slightly shift outside their expected mapping windows to align with available content, incurring distance penalties that reflect content gaps. Conversely, extra content in generated descriptions causes reference chunks in recall evaluation to map to suboptimal positions, again incurring penalties that signal content additions. In Line-based assessment, missing chunks cause the actual narrative line to become shorter than the ideal range as consecutive alignments skip intermediate positions, while extra content creates longer-than-expected lines as additional alignment points extend the path length. Both scenarios move $L_{\text{act}}$ outside the ideal band $[L_{\min}, L_{\max}]$, triggering proportional penalties. LNT accommodates this content alignment capability by padding mapping window boundaries and adjusting expected neighbor distances, allowing for legitimate descriptive variability while maintaining sensitivity to genuine content gaps and additions.
 
 \subsubsection{Window-Regulariser and Final NAS}
 While Mapping Windows provide essential flexibility for robust evaluation, excessively permissive windows can completely undermine chronological assessment validity. This problem becomes acute when comparing descriptions of vastly different lengths, where mapping windows may become so large that they lose discriminative power.
